feat: add binary file support (images, etc.)
- change output type from String to byte[] in HttpRequest and HttpResponse
- rename FileHandler to FileRequestHandler for clarity